Fix: Keeping row loader in center of screen even if Grid has horizontal scroll

--- a/grid/src/Styles/grid.scss
+++ b/grid/src/Styles/grid.scss
@@ -312,6 +312,10 @@
                 }
             }
         }
+        .neo-grid__row-loader {
+            position: sticky;
+            left: 0;
+        }
         .ng-action {
             display: flex;
             flex-direction: column;
